Test Org - Speridian/src/objects/BA_Quote_Census__c.object
<CustomObject>
    <fields>
        <fullName>Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>Quote</referenceTo>
        <relationshipLabel>Quote Census</relationshipLabel>
        <relationshipName>Quote_Census</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ba_CensusEffectiveDate__c</fullName>
        <label>Census Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_CensusTerminationDate__c</fullName>
        <label>Census Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_EmployeeNumber__c</fullName>
        <label>Employee Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_MemberDOB__c</fullName>
        <label>Date Of Birth</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_MemberGender__c</fullName>
        <label>Gender</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_Member__c</fullName>
        <label>Member Name</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_Relation__c</fullName>
        <label>Relation</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Self</fullName>
                </value>
                <value>
                    <fullName>Dependent</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_TobaccoUse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tobacco Use</label>
        <type>Checkbox</type>
    </fields>
    <label>Quote Census</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QCID{0000}</displayFormat>
        <label>Quote Census Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Census</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>